# OuterWildsAutosplitterCore

./: Cargo.toml  README.md
src/: game.rs  lib.rs  settings.rs
